fix issue with <p> too small

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -142,7 +142,7 @@ p {
 
 	/* added by adit */
 	font-weight: 200;
-	font-size: 16px;
+	font-size: 18px;
 	line-height: normal;
 }
 
